k8s/talos/apps/gwapi-demo/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-v2
  namespace: gwapi-demo
spec:
  selector:
    app: whoami-v2
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
